# vhdmmio

./: .coveragerc  .gitignore  .pylintrc  MANIFEST.in  Makefile  README.md  axi.html  azure-pipelines.yml  conditionconfig.html  config.html  constant.html  control.html  counter.html  custom.html  custominterfaceconfig.html  entityconfig.html  featureconfig.html  fieldconfig.html  flag.html  index.html  interfaceconfig.html  internalcontrol.html  internalcounter.html  internalflag.html  internalioconfig.html  internalstatus.html  internalstrobe.html  interrupt.html  interruptconfig.html  interruptenable.html  interruptflag.html  interruptpend.html  interruptraw.html  interruptstatus.html  interruptunmask.html  latching.html  metadataconfig.html  mmiotostream.html  multirequest.html  permissionconfig.html  (+18 more)
.github/workflows/: pages.yml  python.yml
doc/: book.toml
doc/md/: README.md  SUMMARY.md  axi.md  config.md  constant.md  control.md  counter.md  custom.md  custominterfaceconfig.md  entityconfig.md  featureconfig.md  fieldconfig.md  flag.md  memory.md  (+27 more)
examples/: .gitignore  Makefile  README.md
mdbook/: book.toml
temp/: concepts.md  design  notes.md  test.py  test.yaml  test2.yaml  vhdl-notes
tests/: test_config.py  test_core_addressing.py  test_core_bitrange.py  test_core_integration.py  test_core_metadata.py  test_integration.py  test_logic_interrupt.py  test_logic_primitive.py  test_template.py  test_testbench.py  test_vhdl_decoder.py  test_vhdl_interface.py  test_vhdl_types.py
vhdmmio/: __init__.py  __main__.py  core.py  template.py  utils.py  version.py
(+263 files in other folders)
